--- a/kava-kbot-consumer/pom.xml
+++ b/kava-kbot-consumer/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kava-kbot-consumer</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <start-class>com.kbot.KbotApplication</start-class>
@@ -25,32 +25,6 @@
     </dependencies>
 
     <build>
-        <!-- 定义包含这些资源文件，能在jar包中获取这些文件 -->
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.yml</include>
-                    <include>**/*.json</include>
-                    <include>**/*.text</include>
-                    <include>**/*.txt</include>
-                    <include>**/*.jpg</include>
-                    <include>**/*.png</include>
-                </includes>
-                <!--是否替换资源中的属性-->
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-                <!--是否替换资源中的属性-->
-                <filtering>false</filtering>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -58,7 +32,7 @@
                 <version>2.1.5.RELEASE</version>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
-                    <layout>JAR</layout>
+                    <layout>WAR</layout>
                 </configuration>
                 <executions>
                     <execution>
@@ -67,6 +41,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <!--如果想在没有web.xml文件的情况下构建WAR，请设置为false。-->
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <warSourceExcludes>src/main/resources/**</warSourceExcludes>
+                    <warName>kava-kbot</warName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
