--- a/kava-kbot-consumer/src/main/resources/bot.properties
+++ b/kava-kbot-consumer/src/main/resources/bot.properties
@@ -7,7 +7,9 @@ bot.qq=
 bot.password=
 #\u8BBE\u5907\u4FE1\u606F
 bot.deviceInfoPath=deviceInfo.json
-#\u73AF\u5883\u5F00\u5173 false\u4E0D\u521B\u5EFAbot
+#\u73AF\u5883\u5F00\u5173 false \u521B\u5EFAkbot,true \u521B\u5EFAmirai-bot
 bot.envSwitch=false
 #\u547D\u4EE4\u524D\u7F00--\u5F85\u5B8C\u5584
 bot.commandPrefix=.
+#lolicon apikey
+bot.loliconKey=
