--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,8 @@
 
     <properties>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-        <mirai.version>2.6.2</mirai.version>
-        <kotlin.version>1.4.32</kotlin.version>
-        <webmagic.version>0.7.4</webmagic.version>
+        <mirai.version>2.8.0-M1</mirai.version>
+        <kotlin.version>1.5.30</kotlin.version>
     </properties>
 
 
@@ -51,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-common</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
