--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 
     <properties>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-        <mirai.version>2.8.0-M1</mirai.version>
-        <kotlin.version>1.5.30</kotlin.version>
+        <mirai.version>2.7.1</mirai.version>
+        <kotlin.version>1.5.10</kotlin.version>
     </properties>
 
 
