--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,20 @@
 
     <properties>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+
         <mirai.version>2.8.2</mirai.version>
         <kotlin.version>1.5.30</kotlin.version>
+
+        <javax.servlet.version>3.1.0</javax.servlet.version>
+        <commons.lang3.version>3.11</commons.lang3.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <guava.version>30.0-jre</guava.version>
+        <mysql.connector.version>5.1.47</mysql.connector.version>
+        <druid.version>1.1.17</druid.version>
+        <mybatis.plus.version>3.5.1</mybatis.plus.version>
+        <lombok.version>1.18.4</lombok.version>
+        <fastjson.version>1.2.75</fastjson.version>
+        <thumbnailator.version>0.4.3</thumbnailator.version>
     </properties>
 
 
@@ -70,7 +82,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -90,13 +102,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.0-jre</version>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
@@ -108,26 +120,47 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.75</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <!-- 图片处理工具 -->
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
-            <version>0.4.3</version>
+            <version>${thumbnailator.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>${commons.lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis.plus.version}</version>
+        </dependency>
+
+        <!--mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.connector.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
         </dependency>
     </dependencies>
 
