--- a/kava-kbot-api/pom.xml
+++ b/kava-kbot-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>kava-kbot</artifactId>
         <groupId>com.kava</groupId>
-        <version>1.0-kava.start-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
