--- a/kava-kbot-consumer/src/main/resources/application.yml
+++ b/kava-kbot-consumer/src/main/resources/application.yml
@@ -3,3 +3,9 @@ server:
 spring:
   main:
     web-application-type: none
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/kbot?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: qwAS1234
