--- a/kava-kbot-consumer/src/main/resources/application.yml
+++ b/kava-kbot-consumer/src/main/resources/application.yml
@@ -4,8 +4,10 @@ spring:
   main:
     web-application-type: none
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/kbot?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: qwAS1234
+    password: root
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
