--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,7 @@
         <commons.lang3.version>3.11</commons.lang3.version>
         <httpclient.version>4.5.13</httpclient.version>
         <guava.version>30.0-jre</guava.version>
-        <mysql.connector.version>5.1.47</mysql.connector.version>
-        <druid.version>1.1.17</druid.version>
+        <mysql.connector.version>8.0.22</mysql.connector.version>
         <mybatis.plus.version>3.5.1</mybatis.plus.version>
         <lombok.version>1.18.4</lombok.version>
         <fastjson.version>1.2.75</fastjson.version>
@@ -110,11 +109,6 @@
             <version>${mysql.connector.version}</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>${druid.version}</version>
-        </dependency>
 
         <!--工具类-->
         <dependency>
@@ -151,6 +145,28 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+
+        <!-- cglib的BeanCopier需要的依赖 start -->
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-util</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <!--maven插件-->
